Get only nodes with more than one reference for single file

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,7 @@
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
-    "filename = os.path.basename(dataset_path)\n",
-    "title = filename.split('.')[0].capitalize()"
+    "city_name = \"Ringheim\"   "
    ]
   },
   {
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +520,7 @@
        "[335843 rows x 9 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +742,7 @@
        "[12307 rows x 9 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,8 +762,7 @@
     "                bbox = result['boundingbox']\n",
     "                return [float(coord) for coord in bbox]  \n",
     "    raise ValueError(\"Bounding Box konnte nicht abgerufen werden.\")\n",
-    "    \n",
-    "city_name = \"Ringheim\"    \n",
+    "     \n",
     "bbox = get_bounding_box(city_name)\n",
     "south, north, west, east = bbox\n",
     "\n",
@@ -785,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1046,7 @@
        "[12813 rows x 9 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,98 +1095,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "696\n",
-      "Die gefilterten Daten für Großostheim.json wurden gespeichert.\n",
-      "676\n",
-      "Die gefilterten Daten für Ringheim.json wurden gespeichert.\n"
+      "676\n"
      ]
     }
    ],
    "source": [
-    "def process_and_save_city_data_json(input_folder=\"City_data\"):\n",
-    "    for filename in os.listdir(input_folder):\n",
-    "        if filename.endswith(\".json\"):\n",
-    "            input_file = os.path.join(input_folder, filename)\n",
-    "            \n",
-    "            with open(input_file, 'r', encoding='utf-8') as f:\n",
-    "                json_data = json.load(f)\n",
+    "def process_and_save_city_data_json(city_name, input_folder=\"City_data\"):\n",
+    "    filename = f\"{city_name}.json\"\n",
+    "    input_file = os.path.join(input_folder, filename)\n",
+    "    \n",
+    "    if not os.path.exists(input_file):\n",
+    "        print(f\"Datei für {city_name} wurde nicht gefunden.\")\n",
+    "        return        \n",
     "\n",
-    "            df_from_file = pd.json_normalize(json_data)\n",
+    "    with open(input_file, 'r', encoding='utf-8') as f:\n",
+    "        json_data = json.load(f)\n",
     "\n",
-    "            # Alle Knoten-IDs aus den Wegen extrahieren\n",
-    "            all_node_ids = []\n",
-    "            for node_ids_list in df_from_file[df_from_file['type'] == 'way']['node_ids']:\n",
-    "                if node_ids_list is not None:\n",
-    "                    all_node_ids.extend(node_ids_list)\n",
+    "    df_from_file = pd.json_normalize(json_data)\n",
     "\n",
-    "            node_reference_count = Counter(all_node_ids)\n",
+    "    # Alle Knoten-IDs aus den Wegen extrahieren\n",
+    "    all_node_ids = []\n",
+    "    for node_ids_list in df_from_file[df_from_file['type'] == 'way']['node_ids']:\n",
+    "        if node_ids_list is not None:\n",
+    "            all_node_ids.extend(node_ids_list)\n",
     "\n",
-    "            # Nur Knoten, die in mehr als einem Weg referenziert werden (Kreuzungsknoten)\n",
-    "            nodes_referenced_multiple = {node_id for node_id, count in node_reference_count.items() if count > 1}\n",
+    "    node_reference_count = Counter(all_node_ids)\n",
     "\n",
-    "            # Nur die Knoten, die Kreuzungsknoten sind\n",
-    "            df_nodes_filtered_multiple = df_from_file[(df_from_file['type'] == 'node') & (df_from_file['id'].isin(nodes_referenced_multiple))]\n",
+    "    # Nur Knoten, die in mehr als einem Weg referenziert werden (Kreuzungsknoten)\n",
+    "    nodes_referenced_multiple = {node_id for node_id, count in node_reference_count.items() if count > 1}\n",
     "\n",
-    "            # Nur Wege, die Kreuzungsknoten enthalten\n",
-    "            ways_from_file = df_from_file[df_from_file['type'] == 'way']\n",
-    "            ways_from_file = ways_from_file[ways_from_file['node_ids'].apply(lambda node_ids: any(node in nodes_referenced_multiple for node in node_ids))]\n",
+    "    # Nur die Knoten, die Kreuzungsknoten sind\n",
+    "    df_nodes_filtered_multiple = df_from_file[(df_from_file['type'] == 'node') & (df_from_file['id'].isin(nodes_referenced_multiple))]\n",
     "\n",
-    "            filtered_data_multiple = pd.concat([ways_from_file, df_nodes_filtered_multiple], ignore_index=True)\n",
+    "    # Nur Wege, die Kreuzungsknoten enthalten\n",
+    "    ways_from_file = df_from_file[df_from_file['type'] == 'way']\n",
+    "    ways_from_file = ways_from_file[ways_from_file['node_ids'].apply(lambda node_ids: any(node in nodes_referenced_multiple for node in node_ids))]\n",
     "\n",
-    "            # Knoten und Wege in separaten Listen speichern\n",
-    "            nodes = []\n",
-    "            for _, row in df_nodes_filtered_multiple.iterrows():\n",
-    "                node = {\n",
-    "                    \"type\": \"node\",\n",
-    "                    \"id\": row['id'],\n",
-    "                    \"visible\": row['visible'],\n",
-    "                    \"latitude\": row['latitude'],\n",
-    "                    \"longitude\": row['longitude'],\n",
-    "                    \"tags\": {}\n",
-    "                }\n",
-    "                # Überprüfen, ob 'tagkey' und 'tagvalue' vorhanden sind\n",
-    "                if 'tagkey' in row and pd.notna(row['tagkey']) and 'tagvalue' in row and pd.notna(row['tagvalue']):\n",
-    "                    node[\"tags\"][row['tagkey']] = row['tagvalue']\n",
-    "                nodes.append(node)\n",
+    "    # Knoten und Wege in separaten Listen speichern\n",
+    "    nodes = []\n",
+    "    for _, row in df_nodes_filtered_multiple.iterrows():\n",
+    "        node = {\n",
+    "            \"type\": \"node\",\n",
+    "            \"id\": row['id'],\n",
+    "            \"visible\": row['visible'],\n",
+    "            \"latitude\": row['latitude'],\n",
+    "            \"longitude\": row['longitude'],\n",
+    "            \"tags\": {}\n",
+    "        }\n",
+    "        # Überprüfen, ob 'tagkey' und 'tagvalue' vorhanden sind\n",
+    "        if 'tagkey' in row and pd.notna(row['tagkey']) and 'tagvalue' in row and pd.notna(row['tagvalue']):\n",
+    "            node[\"tags\"][row['tagkey']] = row['tagvalue']\n",
+    "        nodes.append(node)\n",
     "\n",
-    "            ways = []\n",
-    "            for _, row in ways_filter.iterrows():\n",
-    "                way = {\n",
-    "                    \"type\": \"way\",\n",
-    "                    \"id\": row['id'],\n",
-    "                    \"visible\": row['visible'],\n",
-    "                    \"node_ids\": row['node_ids'],\n",
-    "                    \"tags\": {}\n",
-    "                }\n",
-    "                # Überprüfen, ob 'tagkey' und 'tagvalue' vorhanden sind\n",
-    "                if 'tagkey' in row and pd.notna(row['tagkey']) and 'tagvalue' in row and pd.notna(row['tagvalue']):\n",
-    "                    way[\"tags\"][row['tagkey']] = row['tagvalue']\n",
-    "                ways.append(way)\n",
+    "    ways = []\n",
+    "    for _, row in ways_from_file.iterrows():  \n",
+    "        way = {\n",
+    "            \"type\": \"way\",\n",
+    "            \"id\": row['id'],\n",
+    "            \"visible\": row['visible'],\n",
+    "            \"node_ids\": row['node_ids'],\n",
+    "            \"tags\": {}\n",
+    "        }\n",
+    "        # Überprüfen, ob 'tagkey' und 'tagvalue' vorhanden sind\n",
+    "        if 'tagkey' in row and pd.notna(row['tagkey']) and 'tagvalue' in row and pd.notna(row['tagvalue']):\n",
+    "            way[\"tags\"][row['tagkey']] = row['tagvalue']\n",
+    "        ways.append(way)\n",
     "\n",
-    "            # Alle Knoten und Wege zusammenstellen\n",
-    "            filtered_data = {\"nodes\": nodes, \"ways\": ways}\n",
-    "            print(len(nodes))\n",
+    "    # Alle Knoten und Wege zusammenstellen\n",
+    "    filtered_data = {\"nodes\": nodes, \"ways\": ways}\n",
+    "    print(len(nodes))\n",
     "\n",
-    "            # Speichern der gefilterten Daten zurück in die gleiche JSON-Datei\n",
-    "            output_file = os.path.join(input_folder, filename)\n",
-    "            with open(output_file, 'w', encoding='utf-8') as f:\n",
-    "                json.dump(filtered_data, f, ensure_ascii=False, indent=4)\n",
+    "    # Speichern der gefilterten Daten zurück in die gleiche JSON-Datei\n",
+    "    output_file = os.path.join(input_folder, filename)\n",
+    "    with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "        json.dump(filtered_data, f, ensure_ascii=False, indent=4)\n",
     "\n",
-    "            print(f\"Die gefilterten Daten für {filename} wurden gespeichert.\")\n",
-    "\n",
-    "            # Leeren der Listen und Variablen für den nächsten Durchlauf\n",
-    "            nodes.clear()\n",
-    "            ways.clear()\n",
-    "            filtered_data = {}  # Leert die gefilterte Datenstruktur\n",
-    "\n",
-    "process_and_save_city_data_json()"
+    "process_and_save_city_data_json(city_name)"
    ]
   },
   {
