Possible visualization for node density in 100 meter

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
-    "city_name = \"Großostheim\"   "
+    "city_name = \"Frankfurt\"   "
    ]
   },
   {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,6 +1355,62 @@
     "    ax.set_xlabel(\"Knotengrad\")\n",
     "    ax.set_ylabel(\"Anzahl der Knoten\")\n",
     "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_grid_density(df, grid_size=100):\n",
+    "    earth_radius = 6371000\n",
+    "    df['x'] = np.radians(df['longitude']) * np.cos(np.radians(df['latitude'])) * earth_radius\n",
+    "    df['y'] = np.radians(df['latitude']) * earth_radius\n",
+    "\n",
+    "    df['grid_x'] = (df['x'] // grid_size).astype(int)\n",
+    "    df['grid_y'] = (df['y'] // grid_size).astype(int)\n",
+    "\n",
+    "    grid_density = df.groupby(['grid_x', 'grid_y']).size().reset_index(name='node_count')\n",
+    "    return grid_density    \n",
+    "\n",
+    "city_folder = \"City_data\"\n",
+    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
+    "all_densities = []\n",
+    "\n",
+    "for file in files:\n",
+    "    city_name = os.path.splitext(file)[0]\n",
+    "    df = load_from_xml_with_length(city_name)\n",
+    "    \n",
+    "    df_nodes = df[df['type'] == 'node']\n",
+    "\n",
+    "    G = nx.Graph()\n",
+    "    for _, row in df[df['type'] == 'way'].iterrows():\n",
+    "        node_ids = row['node_ids']\n",
+    "        if node_ids is not None:\n",
+    "            for i in range(len(node_ids) - 1):\n",
+    "                G.add_edge(node_ids[i], node_ids[i + 1])\n",
+    "    \n",
+    "    node_degrees = dict(G.degree())\n",
+    "    df_nodes['degree'] = df_nodes['id'].map(node_degrees).fillna(0).astype(int)\n",
+    "    df_nodes = df_nodes[df_nodes['degree'] > 0]\n",
+    "    \n",
+    "    # Berechne Knotendichte\n",
+    "    grid_density = calculate_grid_density(df_nodes)\n",
+    "    grid_density['city_name'] = city_name\n",
+    "    all_densities.append(grid_density)\n",
+    "\n",
+    "# Kombiniere die Knotendichten aller Städte\n",
+    "df_all_densities = pd.concat(all_densities, ignore_index=True)\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(data=df_all_densities, x='city_name', y='node_count')\n",
+    "plt.title(\"Vergleich der Knotendichten im 100m-Gitternetz\")\n",
+    "plt.xlabel(\"Stadt\")\n",
+    "plt.ylabel(\"Knotendichte (Anzahl Knoten pro Gitterzelle)\")\n",
+    "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
