Delete visible from tags

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
-    "city_name = \"Frankfurt\"   "
+    "city_name = \"Würzburg\"   "
    ]
   },
   {
@@ -55,7 +55,6 @@
     "            # Für Knoten ohne Tags\n",
     "            self.osm_data.append([elem_type, \n",
     "                                  elem.id, \n",
-    "                                  elem.visible, \n",
     "                                  0, \n",
     "                                  None, \n",
     "                                  None, \n",
@@ -66,7 +65,6 @@
     "            for tag in elem.tags:\n",
     "                self.osm_data.append([elem_type, \n",
     "                                      elem.id,\n",
-    "                                      elem.visible,\n",
     "                                      len(elem.tags),\n",
     "                                      tag.k, \n",
     "                                      tag.v, lon, lat, node_ids])\n",
@@ -83,7 +81,7 @@
     "osmhandler.apply_file(dataset_path)\n",
     "\n",
     "# DataFrame erstellen\n",
-    "data_colnames = ['type', 'id', 'visible', 'ntags', 'tagkey', 'tagvalue', 'longitude', 'latitude', 'node_ids']\n",
+    "data_colnames = ['type', 'id', 'ntags', 'tagkey', 'tagvalue', 'longitude', 'latitude', 'node_ids']\n",
     "df_osm = pd.DataFrame(osmhandler.osm_data, columns=data_colnames)\n",
     "df_osm"
    ]
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
