--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
-    "city_name = \"Würzburg\"   "
+    "city_name = \"Ringheim\"   "
    ]
   },
   {
@@ -55,6 +55,7 @@
     "            # Für Knoten ohne Tags\n",
     "            self.osm_data.append([elem_type, \n",
     "                                  elem.id, \n",
+    "                                  elem.visible,\n",
     "                                  0, \n",
     "                                  None, \n",
     "                                  None, \n",
@@ -65,6 +66,7 @@
     "            for tag in elem.tags:\n",
     "                self.osm_data.append([elem_type, \n",
     "                                      elem.id,\n",
+    "                                      elem.visible,\n",
     "                                      len(elem.tags),\n",
     "                                      tag.k, \n",
     "                                      tag.v, lon, lat, node_ids])\n",
@@ -81,7 +83,7 @@
     "osmhandler.apply_file(dataset_path)\n",
     "\n",
     "# DataFrame erstellen\n",
-    "data_colnames = ['type', 'id', 'ntags', 'tagkey', 'tagvalue', 'longitude', 'latitude', 'node_ids']\n",
+    "data_colnames = ['type', 'id', 'visible', 'ntags', 'tagkey', 'tagvalue', 'longitude', 'latitude', 'node_ids']\n",
     "df_osm = pd.DataFrame(osmhandler.osm_data, columns=data_colnames)\n",
     "df_osm"
    ]
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +431,7 @@
     "\n",
     "node_degrees = dict(G.degree())\n",
     "node_color = ['red' if node_degrees[node] >= 3 else 'blue' for node in G.nodes()]\n",
-    "nx.draw_networkx_nodes(G, pos, node_size=50, node_color=node_color)\n",
+    "nx.draw_networkx_nodes(G, pos, node_size=10, node_color=node_color)\n",
     "\n",
     "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
@@ -796,7 +798,7 @@
     "\n",
     "node_degrees = dict(G.degree())\n",
     "node_color = ['red' if node_degrees[node] >= 3 else 'blue' for node in G.nodes()]\n",
-    "nx.draw_networkx_nodes(G, pos, node_size=50, node_color=node_color)\n",
+    "nx.draw_networkx_nodes(G, pos, node_size=10, node_color=node_color)\n",
     "\n",
     "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
@@ -938,7 +940,7 @@
     "\n",
     "node_degrees = dict(G.degree())\n",
     "node_color = ['red' if node_degrees[node] >= 3 else 'blue' for node in G.nodes()]\n",
-    "nx.draw_networkx_nodes(G, pos, node_size=50, node_color=node_color)\n",
+    "nx.draw_networkx_nodes(G, pos, node_size=10, node_color=node_color)\n",
     "\n",
     "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
