--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1482,7 +1482,7 @@
     "    axes[row][col].axis('off')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
