--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19879,7 +19879,7 @@
     "\n",
     "# Anzahl der Diagramme pro Zeile\n",
     "cols = 3\n",
-    "rows = math.ceil(len(files) / cols)  # Anzahl der Zeilen berechnen\n",
+    "rows = math.ceil(len(files) / cols)  \n",
     "fig, axes = plt.subplots(rows, cols, figsize=(15, 5 * rows), sharey=True)\n",
     "\n",
     "# Achsen flachstellen für einfacheren Zugriff\n",
@@ -19902,10 +19902,9 @@
     "for i in range(len(files), len(axes)):\n",
     "    fig.delaxes(axes[i])\n",
     "\n",
-    "# Gesamttitel und Darstellung\n",
     "fig.suptitle(\"Straßenlängen pro Stadt\", fontsize=16)\n",
     "plt.tight_layout()\n",
-    "plt.subplots_adjust(top=0.9)  # Platz für den Titel\n",
+    "plt.subplots_adjust(top=0.9)  \n",
     "plt.show()"
    ]
   },
@@ -19936,21 +19935,19 @@
     "\n",
     "files.sort(key=custom_sort)\n",
     "\n",
-    "# Anzahl der Spalten und Zeilen berechnen\n",
-    "columns = 3\n",
-    "rows = math.ceil(len(files) / columns)\n",
+    "# Anzahl der Diagramme pro Zeile\n",
+    "cols = 3\n",
+    "rows = math.ceil(len(files) / cols)  \n",
+    "fig, axes = plt.subplots(rows, cols, figsize=(15, 5 * rows), sharey=True)\n",
     "\n",
-    "# Subplots erstellen\n",
-    "fig, axes = plt.subplots(rows, columns, figsize=(15, 5 * rows))\n",
-    "\n",
-    "# Achsen flach machen, damit sie iteriert werden können\n",
+    "# Achsen flachstellen für einfacheren Zugriff\n",
     "axes = axes.flatten()\n",
     "\n",
     "for i, file in enumerate(files):\n",
     "    city_name = os.path.splitext(file)[0]\n",
     "    df = load_from_xml_with_length(city_name)\n",
     "\n",
-    "    # Daten filtern: Nur Straßen mit definierter Länge\n",
+    "    # Nur Straßen mit Längen auswählen\n",
     "    df_filtered = df[(df['type'] == 'way') & df['length'].notna()]\n",
     "\n",
     "    sns.histplot(df_filtered['length'], bins=30, kde=True, ax=axes[i])\n",
@@ -19958,7 +19955,7 @@
     "    axes[i].set_xlabel(\"Straßenlänge (m)\")\n",
     "    axes[i].set_ylabel(\"Anzahl der Straßen\")\n",
     "\n",
-    "# Leere Achsen entfernen, falls die Anzahl der Dateien nicht durch 3 teilbar ist\n",
+    "# Nicht genutzte Subplots ausblenden\n",
     "for j in range(len(files), len(axes)):\n",
     "    fig.delaxes(axes[j])\n",
     "\n",
@@ -19993,18 +19990,14 @@
     "\n",
     "files.sort(key=custom_sort)\n",
     "\n",
-    "# Farben für jeden Typ\n",
     "highway_types = ['primary', 'secondary', 'tertiary']\n",
     "colors = {'primary': 'skyblue', 'secondary': 'orange', 'tertiary': 'green'}\n",
     "\n",
-    "# Raster mit 3 Diagrammen pro Zeile\n",
     "columns = 3\n",
     "rows = math.ceil(len(files) / columns)\n",
-    "\n",
     "fig, axes = plt.subplots(rows, columns, figsize=(15, 5 * rows))\n",
-    "axes = axes.flatten()  # Alle Achsen in einer Liste flach machen\n",
+    "axes = axes.flatten()  \n",
     "\n",
-    "# Histogramme zeichnen\n",
     "for ax, file in zip(axes, files):\n",
     "    city_name = os.path.splitext(file)[0]\n",
     "    df = load_from_xml_with_length(city_name)\n",
@@ -20027,7 +20020,6 @@
     "    ax.set_ylabel(\"Anzahl der Straßen\")\n",
     "    ax.legend(title=\"Highway-Typ\")\n",
     "\n",
-    "# Verbleibende Achsen ausblenden\n",
     "for ax in axes[len(files):]:\n",
     "    ax.axis('off')\n",
     "\n",
@@ -20062,24 +20054,19 @@
     "\n",
     "files.sort(key=custom_sort)\n",
     "\n",
-    "# Farben für jeden Typ\n",
     "highway_types = ['residential', 'living_street']\n",
     "colors = {'residential': 'skyblue', 'living_street': 'orange'}\n",
     "\n",
-    "# Rastergröße berechnen (3 Diagramme pro Zeile)\n",
     "columns = 3\n",
     "rows = math.ceil(len(files) / columns)\n",
-    "\n",
-    "# Subplots erstellen\n",
     "fig, axes = plt.subplots(rows, columns, figsize=(15, 5 * rows))\n",
-    "axes = axes.flatten()  # Zum einfachen Iterieren in einer 1D-Liste\n",
+    "axes = axes.flatten()  \n",
     "\n",
-    "# Histogramme zeichnen\n",
     "for i, file in enumerate(files):\n",
     "    city_name = os.path.splitext(file)[0]\n",
     "    df = load_from_xml_with_length(city_name)\n",
     "\n",
-    "    ax = axes[i]  # Aktuellen Achsen auswählen\n",
+    "    ax = axes[i] \n",
     "\n",
     "    # Pro Highway-Typ zeichnen\n",
     "    for highway in highway_types:\n",
@@ -20099,7 +20086,6 @@
     "    ax.set_ylabel(\"Anzahl der Straßen\")\n",
     "    ax.legend(title=\"Highway-Typ\")\n",
     "\n",
-    "# Unbenutzte Achsen ausblenden\n",
     "for j in range(len(files), len(axes)):\n",
     "    axes[j].axis(\"off\")\n",
     "\n",
@@ -20134,24 +20120,18 @@
     "\n",
     "files.sort(key=custom_sort)\n",
     "\n",
-    "# Farben für jeden Typ\n",
     "highway_types = ['service', 'pedestrian', 'track', 'footway', 'sidewalk', 'steps']\n",
     "colors = {'service': 'skyblue', 'pedestrian': 'orange', 'track': 'green', 'footway': 'yellow', 'sidewalk': 'red', 'steps': 'purple'}\n",
     "\n",
-    "# Anzahl der Zeilen und Spalten berechnen\n",
-    "cols = 3  # Drei Diagramme pro Zeile\n",
-    "rows = math.ceil(len(files) / cols)  # Berechnet die benötigten Zeilen\n",
-    "\n",
-    "# Subplots erstellen\n",
+    "cols = 3  \n",
+    "rows = math.ceil(len(files) / cols)  \n",
     "fig, axes = plt.subplots(rows, cols, figsize=(15, 5 * rows))\n",
-    "axes = axes.flatten()  # Flach machen, um sie einfacher anzusprechen\n",
+    "axes = axes.flatten()  \n",
     "\n",
-    "# Histogramme zeichnen\n",
     "for ax, file in zip(axes, files):\n",
     "    city_name = os.path.splitext(file)[0]\n",
     "    df = load_from_xml_with_length(city_name)\n",
     "\n",
-    "    # Pro Highway-Typ zeichnen\n",
     "    for highway in highway_types:\n",
     "        df_filtered = df[(df['type'] == 'way') & \n",
     "                         (df['tagkey'] == 'highway') & \n",
@@ -20169,7 +20149,6 @@
     "    ax.set_ylabel(\"Anzahl der Straßen\")\n",
     "    ax.legend(title=\"Highway-Typ\")\n",
     "\n",
-    "# Entferne leere Subplots (falls weniger Dateien als Subplots vorhanden sind)\n",
     "for ax in axes[len(files):]:\n",
     "    ax.remove()\n",
     "\n",
@@ -20208,19 +20187,15 @@
     "\n",
     "city_folder = \"City_data\"\n",
     "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
-    "\n",
-    "# Dateien sortieren\n",
     "files.sort(key=custom_sort)\n",
     "\n",
-    "# Anzahl der Spalten für Subplots\n",
     "columns = 3\n",
-    "rows = (len(files) + columns - 1) // columns  # Zeilenanzahl berechnen\n",
+    "rows = (len(files) + columns - 1) // columns  \n",
     "fig, axes = plt.subplots(rows, columns, figsize=(15, 5 * rows), squeeze=False)\n",
     "\n",
-    "# Subplots erstellen\n",
     "for idx, file in enumerate(files):\n",
     "    city_name = os.path.splitext(file)[0]\n",
-    "    city_data = load_from_xml_with_length(city_name)  # Daten der aktuellen Datei laden\n",
+    "    city_data = load_from_xml_with_length(city_name) \n",
     "\n",
     "    # Netzwerkgraph für diese Stadt erstellen\n",
     "    G = nx.Graph()\n",
@@ -20245,13 +20220,12 @@
     "\n",
     "    bins = np.arange(1, 7) - 0.5\n",
     "    \n",
-    "    sns.histplot(city_node_degrees, bins=bins, kde=True, ax=ax)  # Anzahl der Bins anpassen\n",
+    "    sns.histplot(city_node_degrees, bins=bins, kde=True, ax=ax)  \n",
     "    ax.set_title(f\"Knotengrade in {city_name}\")\n",
     "    ax.set_xlabel(\"Knotengrad\")\n",
     "    ax.set_ylabel(\"Anzahl der Knoten\")\n",
     "    ax.set_xticks(range(1, 7))\n",
     "\n",
-    "# Leere Plots ausblenden\n",
     "for idx in range(len(files), rows * columns):\n",
     "    row, col = divmod(idx, columns)\n",
     "    axes[row][col].axis('off')\n",
@@ -20324,6 +20298,20 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Auswirkungen von wichtigsten Kreuzungen und Straßen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
