files in subfolder and sorting

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1180,12 @@
     "        return 3\n",
     "\n",
     "    city_folder = \"City_data\"\n",
-    "    files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
+    "    files = []\n",
+    "\n",
+    "    for subfolder in ['village', 'town', 'city']:\n",
+    "        full_path = os.path.join(city_folder, subfolder)\n",
+    "        files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
+    "\n",
     "    files.sort(key=custom_sort)\n",
     "    result = []\n",
     "\n",
@@ -1194,7 +1199,7 @@
     "        \n",
     "        if total_length > 0:\n",
     "            length_by_type = highway_df.groupby('tagvalue')['length'].sum()\n",
-    "            length_by_type_sorted = length_by_type.sort_values(ascending=False).head(7)  # Nur die 7 höchsten Straßentypen behalten\n",
+    "            length_by_type_sorted = length_by_type.sort_values(ascending=False).head(7) \n",
     "            for highway_type, length in length_by_type_sorted.items():\n",
     "                percentage = (length / total_length) * 100\n",
     "                result.append({\n",
@@ -1252,7 +1257,10 @@
     "    return 3\n",
     "\n",
     "city_folder = \"City_data\"\n",
-    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "files.sort(key=custom_sort)\n",
     "\n",
     "all_lengths = []\n",
@@ -1301,8 +1309,10 @@
     "    return 3\n",
     "\n",
     "city_folder = \"City_data\"\n",
-    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
-    "\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "files.sort(key=custom_sort)\n",
     "\n",
     "# Anzahl der Diagramme pro Zeile\n",
@@ -1357,7 +1367,10 @@
     "    return 3\n",
     "\n",
     "city_folder = \"City_data\"\n",
-    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "files.sort(key=custom_sort)\n",
     "\n",
     "highway_types = ['primary', 'secondary', 'tertiary']\n",
@@ -1421,8 +1434,10 @@
     "    return 3\n",
     "\n",
     "city_folder = \"City_data\"\n",
-    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
-    "\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "files.sort(key=custom_sort)\n",
     "\n",
     "highway_types = ['residential', 'living_street']\n",
@@ -1488,8 +1503,10 @@
     "    return 3\n",
     "\n",
     "city_folder = \"City_data\"\n",
-    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
-    "\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "files.sort(key=custom_sort)\n",
     "\n",
     "highway_types = ['service', 'pedestrian', 'track', 'footway', 'sidewalk', 'steps']\n",
@@ -1559,7 +1576,10 @@
     "    return 3\n",
     "\n",
     "city_folder = \"City_data\"\n",
-    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "files.sort(key=custom_sort)\n",
     "\n",
     "columns = 3\n",
@@ -1634,7 +1654,10 @@
     "    return 3\n",
     "\n",
     "city_folder = \"City_data\"\n",
-    "files = [file for file in os.listdir(city_folder) if file.endswith(\".osm\")]\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'city']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(subfolder, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "files.sort(key=custom_sort)\n",
     "all_densities = []\n",
     "\n",
