Color streets in every graph cell

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
-    "city_name = \"Mömlingen (village)\"   "
+    "city_name = \"Würzburger Straße 45\"   "
    ]
   },
   {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_city_data = load_from_xml(city_name)\n",
+    "highway_colors = {\n",
+    "    'track': 'blue',\n",
+    "    'residential': 'orange',\n",
+    "    'path': 'green',\n",
+    "    'footway': 'red',\n",
+    "    'service': 'purple',\n",
+    "    'secondary': 'brown',\n",
+    "    'steps': 'pink',\n",
+    "    'primary': 'grey',\n",
+    "    'tertiary': 'black',\n",
+    "}\n",
+    "\n",
+    "df_city_data = load_from_xml_with_length(city_name)\n",
     "\n",
     "G = nx.Graph()\n",
     "\n",
@@ -412,29 +424,28 @@
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
     "        if len(filtered_node_ids_list) > 1:\n",
+    "            highway_type = way['tagvalue']\n",
     "            for i in range(len(filtered_node_ids_list) - 1):\n",
-    "                is_dashed_highway = way['tagkey'] == 'highway' and way['tagvalue'] not in ['residential', 'unclassified', 'service', 'tertiary', 'secondary']\n",
     "                G.add_edge(\n",
     "                    filtered_node_ids_list[i], filtered_node_ids_list[i + 1],\n",
-    "                    street_name=way['tagvalue'],\n",
-    "                    is_dashed_highway=is_dashed_highway\n",
+    "                    street_name=highway_type,\n",
+    "                    highway_type=highway_type\n",
     "                )\n",
     "\n",
     "pos = nx.get_node_attributes(G, 'pos')\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
     "\n",
-    "# Normale Kanten zeichnen\n",
-    "edges_normal = [(u, v) for u, v, d in G.edges(data=True) if not d.get('is_dashed_highway')]\n",
-    "nx.draw_networkx_edges(G, pos, edgelist=edges_normal, edge_color='gray', width=1.5)\n",
-    "\n",
-    "# Gestrichelte Kanten zeichnen\n",
-    "edges_dashed = [(u, v) for u, v, d in G.edges(data=True) if d.get('is_dashed_highway')]\n",
-    "nx.draw_networkx_edges(G, pos, edgelist=edges_dashed, edge_color='gray', width=1.5, style='--')\n",
+    "for highway_type, color in highway_colors.items():\n",
+    "    edges_by_type = [(u, v) for u, v, d in G.edges(data=True) if d.get('highway_type') == highway_type]\n",
+    "    nx.draw_networkx_edges(G, pos, edgelist=edges_by_type, edge_color=color, width=1.5)\n",
     "\n",
     "node_degrees = dict(G.degree())\n",
     "node_color = ['red' if node_degrees[node] >= 3 else 'blue' for node in G.nodes()]\n",
     "nx.draw_networkx_nodes(G, pos, node_size=10, node_color=node_color)\n",
+    "\n",
+    "legend_elements = [Line2D([0], [0], color=color, lw=2, label=highway_type) for highway_type, color in highway_colors.items()]\n",
+    "plt.legend(handles=legend_elements, loc='upper right')\n",
     "\n",
     "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
@@ -765,6 +776,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "highway_colors = {\n",
+    "    'track': 'blue',\n",
+    "    'residential': 'orange',\n",
+    "    'path': 'green',\n",
+    "    'footway': 'red',\n",
+    "    'service': 'purple',\n",
+    "    'secondary': 'brown',\n",
+    "    'steps': 'pink',\n",
+    "    'primary': 'grey',\n",
+    "    'tertiary': 'black',\n",
+    "}\n",
+    "\n",
     "df_city_data = load_from_xml_with_length(city_name)\n",
     "\n",
     "G = nx.Graph()\n",
@@ -779,29 +802,28 @@
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
     "        if len(filtered_node_ids_list) > 1:\n",
+    "            highway_type = way['tagvalue']\n",
     "            for i in range(len(filtered_node_ids_list) - 1):\n",
-    "                is_dashed_highway = way['tagkey'] == 'highway' and way['tagvalue'] not in ['residential', 'unclassified', 'service', 'tertiary', 'secondary']\n",
     "                G.add_edge(\n",
     "                    filtered_node_ids_list[i], filtered_node_ids_list[i + 1],\n",
-    "                    street_name=way['tagvalue'],\n",
-    "                    is_dashed_highway=is_dashed_highway\n",
+    "                    street_name=highway_type,\n",
+    "                    highway_type=highway_type\n",
     "                )\n",
     "\n",
     "pos = nx.get_node_attributes(G, 'pos')\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
     "\n",
-    "# Normale Kanten zeichnen\n",
-    "edges_normal = [(u, v) for u, v, d in G.edges(data=True) if not d.get('is_dashed_highway')]\n",
-    "nx.draw_networkx_edges(G, pos, edgelist=edges_normal, edge_color='gray', width=1.5)\n",
-    "\n",
-    "# Gestrichelte Kanten zeichnen\n",
-    "edges_dashed = [(u, v) for u, v, d in G.edges(data=True) if d.get('is_dashed_highway')]\n",
-    "nx.draw_networkx_edges(G, pos, edgelist=edges_dashed, edge_color='gray', width=1.5, style='--')\n",
+    "for highway_type, color in highway_colors.items():\n",
+    "    edges_by_type = [(u, v) for u, v, d in G.edges(data=True) if d.get('highway_type') == highway_type]\n",
+    "    nx.draw_networkx_edges(G, pos, edgelist=edges_by_type, edge_color=color, width=1.5)\n",
     "\n",
     "node_degrees = dict(G.degree())\n",
     "node_color = ['red' if node_degrees[node] >= 3 else 'blue' for node in G.nodes()]\n",
     "nx.draw_networkx_nodes(G, pos, node_size=10, node_color=node_color)\n",
+    "\n",
+    "legend_elements = [Line2D([0], [0], color=color, lw=2, label=highway_type) for highway_type, color in highway_colors.items()]\n",
+    "plt.legend(handles=legend_elements, loc='upper right')\n",
     "\n",
     "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
