--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "\n",
     "# Setze den Pfad zum Dataset\n",
     "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
-    "city_name = \"Gailbach\"   "
+    "city_name = \"Ringheim\"   "
    ]
   },
   {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1129,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Straßenhäufigkeit"
+    "## Straßennetzwerke"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_folder = \"City_data\"\n",
+    "files = []\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
+    "\n",
+    "output_folder = \"Street Network\"\n",
+    "os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "for file in files:\n",
+    "    city_name = os.path.splitext(os.path.basename(file))[0]\n",
+    "    df_city_data = load_from_all_xml(file)\n",
+    "\n",
+    "    G = nx.Graph()\n",
+    "\n",
+    "    # Knoten hinzufügen\n",
+    "    for index, row in df_city_data[df_city_data['type'] == 'node'].iterrows():\n",
+    "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
+    "\n",
+    "    # Kanten hinzufügen\n",
+    "    for index, way in df_city_data[df_city_data['type'] == 'way'].iterrows():\n",
+    "        node_ids_list = way['node_ids']\n",
+    "        if node_ids_list is not None:\n",
+    "            filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
+    "            if len(filtered_node_ids_list) > 1:\n",
+    "                highway_type = way['tagvalue']\n",
+    "                for i in range(len(filtered_node_ids_list) - 1):\n",
+    "                    G.add_edge(\n",
+    "                        filtered_node_ids_list[i], filtered_node_ids_list[i + 1],\n",
+    "                        street_name=highway_type,\n",
+    "                        highway_type=highway_type\n",
+    "                    )\n",
+    "\n",
+    "    pos = nx.get_node_attributes(G, 'pos')\n",
+    "\n",
+    "    highway_types = set(d['highway_type'] for u, v, d in G.edges(data=True))\n",
+    "    colors = plt.cm.get_cmap('tab20', len(highway_types))\n",
+    "    highway_color_map = {highway_type: colors(i) for i, highway_type in enumerate(highway_types)}\n",
+    "\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "    for highway_type, color in highway_color_map.items():\n",
+    "        edges_by_type = [(u, v) for u, v, d in G.edges(data=True) if d.get('highway_type') == highway_type]\n",
+    "        nx.draw_networkx_edges(G, pos, edgelist=edges_by_type, edge_color=[color]*len(edges_by_type), width=1.5)\n",
+    "\n",
+    "    node_degrees = dict(G.degree())\n",
+    "    node_color = ['red' if node_degrees[node] >= 3 else 'blue' for node in G.nodes()]\n",
+    "    nx.draw_networkx_nodes(G, pos, node_size=10, node_color=node_color)\n",
+    "    legend_elements = [Line2D([0], [0], color=highway_color_map[highway_type], lw=2, label=highway_type)\n",
+    "                       for highway_type in highway_color_map]\n",
+    "    plt.legend(handles=legend_elements, loc='upper right')\n",
+    "\n",
+    "    # Netzwerk speichern\n",
+    "    output_file = os.path.join(output_folder, f\"{city_name}.png\")\n",
+    "    plt.savefig(output_file)\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Straßenlängen"
    ]
   },
   {
@@ -1194,7 +1265,7 @@
     "    city_folder = \"City_data\"\n",
     "    result = []\n",
     "\n",
-    "    for subfolder in ['village', 'town', 'city']:\n",
+    "    for subfolder in ['village', 'town', 'county']:\n",
     "        full_path = os.path.join(city_folder, subfolder)\n",
     "        files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "\n",
@@ -1239,13 +1310,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Straßenlängen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Boxplott der Straßenlängen"
    ]
   },
@@ -1257,7 +1321,7 @@
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
@@ -1299,7 +1363,7 @@
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
@@ -1347,7 +1411,7 @@
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
@@ -1404,7 +1468,7 @@
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
@@ -1463,7 +1527,7 @@
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
@@ -1526,7 +1590,7 @@
    "source": [
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "\n",
@@ -1581,7 +1645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_grid_density(df, grid_size=100):\n",
+    "def calculate_grid_density(df, grid_size=150):\n",
     "    earth_radius = 6371000\n",
     "    df['x'] = np.radians(df['longitude']) * np.cos(np.radians(df['latitude'])) * earth_radius\n",
     "    df['y'] = np.radians(df['latitude']) * earth_radius\n",
@@ -1594,7 +1658,7 @@
     "\n",
     "city_folder = \"City_data\"\n",
     "files = []\n",
-    "for subfolder in ['village', 'town', 'city']:\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files.extend([os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")])\n",
     "all_densities = []\n",
@@ -1626,11 +1690,11 @@
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.boxplot(data=df_all_densities, x='city_name', y='node_count')\n",
-    "plt.title(\"Vergleich der Knotendichten im 100m-Gitternetz\")\n",
+    "plt.title(\"Vergleich der Knotendichten im 150m-Gitternetz\")\n",
     "plt.xlabel(\"Stadt\")\n",
+    "plt.ylim(0, 25)\n",
     "plt.ylabel(\"Knotendichte (Anzahl Knoten pro Gitterzelle)\")\n",
     "plt.xticks(rotation=45)\n",
-    "plt.yscale('log')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1652,18 +1716,17 @@
     "    G = nx.Graph()\n",
     "    \n",
     "    # Knoten mit Positionsdaten hinzufügen\n",
-    "    nodes = df[(df['type'] == 'node') & (df['longitude'].notna()) & (df['latitude'].notna())]\n",
-    "    for _, node in nodes.iterrows():\n",
-    "        G.add_node(node['id'], pos=(node['longitude'], node['latitude']))\n",
+    "    for index, row in df[df['type'] == 'node'].iterrows():  \n",
+    "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "    # Kanten hinzufügen\n",
-    "    ways = df[df['type'] == 'way']\n",
-    "    for _, way in ways.iterrows():\n",
-    "        node_ids = way['node_ids']\n",
-    "        # Prüfen, ob alle Knoten in G vorhanden sind, bevor die Kante hinzugefügt wird\n",
-    "        for i in range(len(node_ids) - 1):\n",
-    "            if G.has_node(node_ids[i]) and G.has_node(node_ids[i + 1]):\n",
-    "                G.add_edge(node_ids[i], node_ids[i + 1])\n",
+    "    for index, way in df[df['type'] == 'way'].iterrows():\n",
+    "        node_ids_list = way['node_ids']\n",
+    "        if node_ids_list is not None:\n",
+    "            filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
+    "            if len(filtered_node_ids_list) > 1:\n",
+    "                for i in range(len(filtered_node_ids_list) - 1):\n",
+    "                    G.add_edge(filtered_node_ids_list[i], filtered_node_ids_list[i + 1])\n",
     "\n",
     "    return G  \n",
     "\n",
@@ -1677,28 +1740,42 @@
     "        'degree_centrality': degree_centrality,\n",
     "        'closeness_centrality': closeness_centrality,\n",
     "        'betweenness_centrality': betweenness_centrality,\n",
-    "        'eigenvector_centrality': eigenvector_centrality\n",
     "    }\n",
     "\n",
-    "def visualize_centrality(G, centrality, title):\n",
+    "def visualize_centrality(G, centrality, title, output_folder):\n",
     "    pos = nx.get_node_attributes(G, 'pos')\n",
     "    plt.figure(figsize=(10, 7))\n",
-    "    nodes = nx.draw_networkx_nodes(G, pos, node_size=50, cmap=plt.cm.plasma, \n",
+    "\n",
+    "    nodes = nx.draw_networkx_nodes(G, pos, node_size=10, cmap=plt.cm.plasma,\n",
     "                                   node_color=list(centrality.values()), alpha=0.8)\n",
     "    edges = nx.draw_networkx_edges(G, pos, edge_color='grey', alpha=0.5)\n",
-    "    plt.colorbar(nodes)\n",
+    "\n",
+    "    # Hinzufügen der Farbskala\n",
+    "    cbar = plt.colorbar(nodes)\n",
+    "    cbar.set_label('Centrality Value')\n",
+    "\n",
     "    plt.title(title)\n",
     "    plt.axis('off')\n",
-    "    plt.show()\n",
+    "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}.png\"))\n",
+    "    plt.close()\n",
     "\n",
-    "df = load_from_xml_with_length(city_name)\n",
+    "city_folder = \"City_data\"\n",
+    "output_base_folder = \"Node centrality\"\n",
     "\n",
-    "G = create_graph_for_centrality(df)\n",
+    "for subfolder in ['village', 'town', 'county']:\n",
+    "    full_path = os.path.join(city_folder, subfolder)\n",
+    "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
+    "    for file_path in files:\n",
+    "        city_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "        output_folder = os.path.join(output_base_folder, city_name)\n",
+    "        os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "centrality_indices = calculate_centrality_indices(G)\n",
+    "        df = load_from_all_xml(file_path)\n",
+    "        G = create_graph_for_centrality(df)\n",
+    "        centrality_indices = calculate_centrality_indices(G)\n",
     "\n",
-    "for centrality_name, centrality_values in centrality_indices.items():\n",
-    "    visualize_centrality(G, centrality_values, f'{centrality_name.replace(\"_\", \" \").title()}')"
+    "        for centrality_name, centrality_values in centrality_indices.items():\n",
+    "            visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)"
    ]
   }
  ],
