--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,10 +1759,16 @@
     "    plt.savefig(os.path.join(output_folder, f\"{title.replace(' ', '_')}.png\"))\n",
     "    plt.close()\n",
     "\n",
+    "def get_top_centrality_nodes(centrality, top_n=10):\n",
+    "    return sorted(centrality.items(), key=lambda item: item[1], reverse=True)[:top_n]\n",
+    "\n",
+    "# Hauptcode\n",
     "city_folder = \"City_data\"\n",
     "output_base_folder = \"Node centrality\"\n",
     "\n",
-    "for subfolder in ['village', 'town', 'county']:\n",
+    "collected_data = []\n",
+    "\n",
+    "for subfolder in ['village', 'town']:\n",
     "    full_path = os.path.join(city_folder, subfolder)\n",
     "    files = [os.path.join(full_path, file) for file in os.listdir(full_path) if file.endswith(\".osm\")]\n",
     "    for file_path in files:\n",
@@ -1774,8 +1780,14 @@
     "        G = create_graph_for_centrality(df)\n",
     "        centrality_indices = calculate_centrality_indices(G)\n",
     "\n",
+    "        top_nodes = get_top_centrality_nodes(centrality_indices['betweenness_centrality'])\n",
+    "        for node_id, centrality_value in top_nodes:\n",
+    "            collected_data.append({'city': city_name, 'node_id': node_id, 'betweenness_centrality': centrality_value})\n",
+    "\n",
     "        for centrality_name, centrality_values in centrality_indices.items():\n",
-    "            visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)"
+    "            visualize_centrality(G, centrality_values, centrality_name.replace(\"_\", \" \").title(), output_folder)\n",
+    "\n",
+    "top_nodes_df = pd.DataFrame(collected_data)"
    ]
   }
  ],
